final tweaks, added user agent field to db, ready for production

--- a/settings.py.example
+++ b/settings.py.example
@@ -1,15 +1,19 @@
 DEBUG = True
 
 DB_HOST = "localhost"
-DB_NAME = "tpp-site-feedback"
-DB_USER = "zcrosby"
+DB_NAME = "site-feedback"
+DB_USER = "testName"
 DB_PASSWORD = ""
 
 TOPICS = (
-	("Missing-info", "Missing Information"),
-	("broken-indicator","Broken Indicator"),
-	("site-malfunction","Site Malfunction"),
-	("Other","Other"),
+	("opt1","Bug Report"),
+	("opt2","Data Request"),
+	("opt3","Error Report"),
+	("opt4","Feature/Enhancement Request"),
+	("opt5","Login/Password Issue"),
+	("opt6","Technical Support"),
+	("opt7","General Inquiry"),
+	("opt8","Other")
 )
 
 DB_CONNECT_STR = "dbname='{0}' user='{1}' host='{2}' password='{3}'".format(DB_NAME, DB_USER, DB_HOST, DB_PASSWORD)
