--- a/settings.py.example
+++ b/settings.py.example
@@ -5,16 +5,16 @@ DB_NAME = "site-feedback"
 DB_USER = "testName"
 DB_PASSWORD = ""
 
-TOPICS = (
-	("opt1","Bug Report"),
-	("opt2","Data Request"),
-	("opt3","Error Report"),
-	("opt4","Feature/Enhancement Request"),
-	("opt5","Login/Password Issue"),
-	("opt6","Technical Support"),
-	("opt7","General Inquiry"),
-	("opt8","Other")
-)
+TOPICS = {
+	"opt8":"Other",
+	"opt7":"General Inquiry",
+	"opt6":"Technical Support",
+	"opt5":"Login/Password Issue",
+	"opt4":"Feature/Enhancement Request",
+	"opt3":"Error Report",
+	"opt2":"Data Request",
+	"opt1":"Bug Report"
+}
 
 DB_CONNECT_STR = "dbname='{0}' user='{1}' host='{2}' password='{3}'".format(DB_NAME, DB_USER, DB_HOST, DB_PASSWORD)
 
